frontend/src/components/Applications/FileExplorer/FileExplorer.module.scss
.appMenu {
    background: #f1f0eb;
    border-bottom: 0.1rem solid #dedaca;
    color: #000;
    left: 0;
    right: 0;
    min-height: 3.6rem;

    [data-label="views"] {
        img {
            margin-right: 0.1rem;
        }

        &:hover {
            span {
                border-color: transparent;
            }
        }

        &:active {
            .dropdown {
                transform: scaleY(0.6) translate(0.105rem, 0.205rem);
            }
        }
    }

    &:not(:first-child) {
        border-top: 0.1rem solid #fff;
    }

    div:not(:last-child) {
        border-right: 1px solid #dedaca;
    }

    button {
        border: 0.1rem solid transparent;
        flex-shrink: 0;

        &>img {
            margin: 0.5rem;
        }

        &>span {
            padding: 0.5rem 0;
            border-left: 0.1rem solid transparent;
        }

        h4 {
            padding-right: 0.5rem;
        }

        &:hover {
            border: 0.1rem solid #d4d4cb;
            border-radius: 0.3rem;
            box-shadow: inset 0 0.1rem 0.1rem #fefefd, inset 0 -0.1rem 0.1rem #d4d4cb;
            background: #fff5;

            &>span {
                border-left: 0.1rem solid #dedaca;
            }
        }

        &:active {
            box-shadow: inset 0 0.1rem 0.1rem #d4d4cb;
            background: #e5e4de;
            color: #fff;

            img,
            h4 {
                transform: translate(0.05rem, 0.05rem);
            }
        }
    }

    .dropdown {
        height: 100%;
        font-size: 1rem;
        transform: scaleY(0.6) translateY(0.1rem);
        display: block;
        color: #000;
    }
}

.navMenu {
    background: #f1f0eb;
    border-bottom: 0.1rem solid #dedaca;
    border-top: 0.1rem solid #fff;
    color: #000;
    left: 0;
    right: 0;
    min-height: 2.3rem;

    .navLabel {
        color: #7f7c74;
    }

    .navBar {
        background: #fff;
        border: 1px solid #859cb6aa;
        flex-grow: 1;
        flex-shrink: 0;
        margin-bottom: -0.2rem;

        img {
            object-fit: contain;
        }

        input {
            border: none;

            &:hover,
            &:focus {
                outline: none;
            }
        }

        .dropDown {
            text-indent: -999rem;
            background-image: url("/spritesheet__drop_down.png");
            width: 1.6rem;
            height: 100%;
            background-size: cover;

            &:hover {
                background-position: -1.6rem;
            }
        }
    }

    .goButton {
        border-left: 0.1rem solid transparent;
        border-right: 0.1rem solid transparent;
        padding: 0 0.4rem 0 0.2rem;
        height: calc(100% + 1px);

        &:hover {
            filter: brightness(1.1);
            background: #ffffff99;
            border-left: 0.1rem solid #cac5b3;
            border-right: 0.1rem solid #cac5b3;
        }
    }
}

.mainContent {
    overflow-y: auto;
    height: 100%;

    &[data-bg-accent] {
        &:after {
            content: "";
            position: absolute;
            height: 12rem;
            width: 12rem;
            background-size: cover;
            background-repeat: no-repeat;
            bottom: 0;
            right: 0;
            pointer-events: none;
        }

        &[data-bg-accent="pictures"]:after {
            background-image: url("/background__pictures.png");
        }

        &[data-bg-accent="music"]:after {
            background-image: url("/background__music.png");
            width: 11rem;
        }

    }
}

.sidebar {
    width: 18rem;
    background: #6978d1;
    font-size: 0.9rem;
    overflow-y: auto;
}

